; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gdashboard.c_add_item_to_dash.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gdashboard.c_add_item_to_dash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32, i32)* @add_item_to_dash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_item_to_dash(i32** %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store i32** %0, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32**, i32*** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @set_dash_metrics(i32** %8, i32 %10, i32 %11, i32 0)
  ret void
}

declare dso_local i32 @set_dash_metrics(i32**, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
